Fix width for cards on mobile

--- a/src/components/Arrows/ArrowLeft/ArrowLeft.scss
+++ b/src/components/Arrows/ArrowLeft/ArrowLeft.scss
@@ -13,6 +13,7 @@
   cursor: pointer;
 
   color: white;
+  transition: background-color 0.2s;
 
   &--light {
     background-image: url(../../../icons/blackArrowLeft.svg);
